# c_ci_sample

./: .gitignore  CMakeLists.txt  build.sh  build_arm.sh  build_native.sh  exec.sh  exec_arm.sh  exec_native.sh  readme.md
.github/workflows/: build.yml
src/: main.cpp
toolchain/: arm_toolchain.cmake
